Update paper.sh